[gd_scene load_steps=9 format=3 uid="uid://cakvenp53v80u"]

[ext_resource type="PackedScene" uid="uid://b548m5jbf2qxs" path="res://plane.tscn" id="1_k7ucm"]
[ext_resource type="Script" path="res://main.gd" id="1_tbu2f"]
[ext_resource type="PackedScene" uid="uid://da5tbb71utb5a" path="res://rocket.tscn" id="2_okefk"]
[ext_resource type="Texture2D" uid="uid://7wcq1rkgck0d" path="res://ROCKETTACK! art/bg_sky_moon.png" id="4_a2g60"]
[ext_resource type="Texture2D" uid="uid://b8hpexfw4iyxy" path="res://ROCKETTACK! art/bg_mountains.png" id="5_60ot1"]
[ext_resource type="Texture2D" uid="uid://snms7vtpsjy5" path="res://ROCKETTACK! art/bg_foothills.png" id="6_7148r"]
[ext_resource type="PackedScene" uid="uid://bg0ntxrxmh3cy" path="res://hud.tscn" id="7_glv05"]

[sub_resource type="Curve2D" id="Curve2D_umj6s"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1024, 0, 0, 0, 0, 0, 1024, 690.023, 0, 0, 0, 0, 0, 690.023, 0, 0, 0, 0, 0, 0)
}
point_count = 5

[node name="Main" type="Node"]
script = ExtResource("1_tbu2f")
rocket_scene = ExtResource("2_okefk")

[node name="Plane" parent="." instance=ExtResource("1_k7ucm")]

[node name="RocketTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="ScoreTimer" type="Timer" parent="."]

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="StartPosition" type="Marker2D" parent="."]
position = Vector2(240, 450)

[node name="RocketPath" type="Path2D" parent="."]
scale = Vector2(1, 0.988372)
curve = SubResource("Curve2D_umj6s")

[node name="RocketSpawnLocation" type="PathFollow2D" parent="RocketPath"]

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="SkyMoon" type="ParallaxLayer" parent="ParallaxBackground"]

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/SkyMoon"]
position = Vector2(512, 341)
texture = ExtResource("4_a2g60")

[node name="Mountains" type="ParallaxLayer" parent="ParallaxBackground"]

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/Mountains"]
position = Vector2(512, 341)
texture = ExtResource("5_60ot1")

[node name="Foothills" type="ParallaxLayer" parent="ParallaxBackground"]

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/Foothills"]
position = Vector2(512, 341)
texture = ExtResource("6_7148r")

[node name="HUD" parent="." instance=ExtResource("7_glv05")]

[connection signal="hit" from="Plane" to="." method="game_over"]
[connection signal="timeout" from="RocketTimer" to="." method="_on_rocket_timer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_score_timer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_start_timer_timeout"]
[connection signal="start_game" from="HUD" to="." method="new_game"]
